fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xPCV Protocol",
+  "name": "xPCV-Protocol",
   "version": "1.0.0",
   "description": "xPCV Protocol v1.0 solidity contracts repo",
   "main": "index.js",
